refactor: RouletteResponse L12 .toList();로 리팩토링