@@ -10,7 +10,7 @@ public record RouletteResponse(List<RoulettePlaceDto> places) {
     public static RouletteResponse from(List<Place> places) {
         List<RoulettePlaceDto> dtoList = places.stream()
                 .map(place -> new RoulettePlaceDto(place.getId(), place.getName()))
-                .collect(Collectors.toList());
+                .toList();
         return new RouletteResponse(dtoList);
     }
 
